@@ -40,8 +40,14 @@ IN DEVELOPMENT
 
   API CHANGES:
 
+    * The ``put_on_disk`` and ``get_tar_item`` methods in
+      ``InventoryEntry`` were deprecated. (Ian Clatworthy)
+
 
   INTERNALS:
+
+    * The code for exporting trees was refactored not to use the
+      deprecated ``InventoryEntry`` methods. (Ian Clatworthy)
 
     * RuleSearchers return () instead of [] now when there are no matches.
       (Ian Clatworthy)
